--- a/Server/ChatServer/src/main/resources/application.yml
+++ b/Server/ChatServer/src/main/resources/application.yml
@@ -3,10 +3,6 @@ spring:
   mvc:
     log-request-details: true # for debugging
 
-  config:
-    activate:
-      on-profile: local
-
   datasource:
     url: jdbc:h2:mem:db
     username: sa
@@ -20,6 +16,7 @@ spring:
 
   jpa:
     show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
         format_sql: true
