--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -78,10 +78,12 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
+    implementation 'com.google.code.gson:gson:2.10.1'
     kapt "com.google.dagger:hilt-compiler:2.44"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation "androidx.room:room-runtime:2.6.1"
     implementation "androidx.room:room-ktx:2.6.1"
     kapt "androidx.room:room-compiler:2.6.1"
