demo work with websockets - receiving messages not working

--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -79,6 +79,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.4'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
+
+
     kapt "com.google.dagger:hilt-compiler:2.44"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
