--- a/Server/ChatServer/src/main/resources/application.yml
+++ b/Server/ChatServer/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       path: /h2-console
 
   jpa:
-    show-sql: true
+#    show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
