--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.szlazakm.safechat"
-        minSdk 24
+        minSdk 34
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -81,6 +81,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.4'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
+    implementation 'org.whispersystems:signal-protocol-android:2.8.1'
 
 
     kapt "com.google.dagger:hilt-compiler:2.44"
@@ -91,6 +92,13 @@ dependencies {
     implementation "androidx.room:room-runtime:2.6.1"
     implementation "androidx.room:room-ktx:2.6.1"
     kapt "androidx.room:room-compiler:2.6.1"
+
+    // https://mvnrepository.com/artifact/org.signal/libsignal-client
+    implementation("org.signal:libsignal-client:0.45.1")
+    // https://mvnrepository.com/artifact/org.signal/signal-metadata-android
+//    implementation("org.signal:signal-metadata-android:0.1.2")
+
+
 }
 
 kapt {
