--- a/Server/ChatServer/pom.xml
+++ b/Server/ChatServer/pom.xml
@@ -80,10 +80,10 @@
             <artifactId>spring-security-web</artifactId>
             <version>6.2.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.whispersystems</groupId>
             <artifactId>signal-protocol-java</artifactId>
