--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.6.3'
     implementation 'androidx.activity:activity-ktx:1.8.2'
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
     implementation 'androidx.compose.material3:material3-android:1.2.1'
     implementation 'androidx.navigation:navigation-compose:2.7.7'
@@ -76,12 +76,32 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
     implementation "com.google.dagger:hilt-android:2.44"
+    // https://mvnrepository.com/artifact/androidx.hilt/hilt-navigation-compose
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
+    // https://mvnrepository.com/artifact/androidx.navigation/navigation-fragment-ktx
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.0-rc01'
+    // https://mvnrepository.com/artifact/androidx.navigation/navigation-fragment
+    implementation 'androidx.navigation:navigation-fragment:2.8.0-rc01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    // https://mvnrepository.com/artifact/androidx.hilt/hilt-navigation-fragment
+//    implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0'
+
+
+
+
+
+
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.4'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
-    implementation 'org.whispersystems:signal-protocol-android:2.8.1'
+//    implementation 'org.whispersystems:signal-protocol-android:2.8.1'
+    implementation 'at.favre.lib:hkdf:2.0.0'
 
 
     kapt "com.google.dagger:hilt-compiler:2.44"
@@ -93,12 +113,10 @@ dependencies {
     implementation "androidx.room:room-ktx:2.6.1"
     kapt "androidx.room:room-compiler:2.6.1"
 
-    // https://mvnrepository.com/artifact/org.signal/libsignal-client
-    implementation("org.signal:libsignal-client:0.45.1")
-    // https://mvnrepository.com/artifact/org.signal/signal-metadata-android
-//    implementation("org.signal:signal-metadata-android:0.1.2")
-    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
-    implementation("org.bouncycastle:bcprov-jdk15on:1.70")
+//    implementation("org.signal:libsignal-client:0.45.1")
+// https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
+    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
+
 
 
 
