--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -76,33 +76,20 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
     implementation "com.google.dagger:hilt-android:2.44"
-    // https://mvnrepository.com/artifact/androidx.hilt/hilt-navigation-compose
     implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
-    // https://mvnrepository.com/artifact/androidx.navigation/navigation-fragment-ktx
     implementation 'androidx.navigation:navigation-fragment-ktx:2.8.0-rc01'
-    // https://mvnrepository.com/artifact/androidx.navigation/navigation-fragment
     implementation 'androidx.navigation:navigation-fragment:2.8.0-rc01'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    // https://mvnrepository.com/artifact/androidx.hilt/hilt-navigation-fragment
-//    implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0'
     implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0'
-
-
-
-
-
-
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.4'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
-//    implementation 'org.whispersystems:signal-protocol-android:2.8.1'
     implementation 'at.favre.lib:hkdf:2.0.0'
-
 
     kapt "com.google.dagger:hilt-compiler:2.44"
 
@@ -112,12 +99,15 @@ dependencies {
     implementation "androidx.room:room-runtime:2.6.1"
     implementation "androidx.room:room-ktx:2.6.1"
     kapt "androidx.room:room-compiler:2.6.1"
-
-//    implementation("org.signal:libsignal-client:0.45.1")
-// https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
 
-    testImplementation 'org.spockframework:spock-core:2.4-M4-groovy-4.0'
+    testImplementation("org.mockito:mockito-core:5.7.0")
+    testImplementation("org.mockito:mockito-inline:3.12.4")
+    testImplementation("org.jetbrains.kotlin:kotlin-test-junit:1.5.31")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4")
+    testImplementation("org.jetbrains.kotlin:kotlin-test-junit:1.5.31")
+    testImplementation("org.robolectric:robolectric:4.7.3")
+    testImplementation("androidx.test:core:1.6.1")
 }
 
 kapt {
