--- a/Server/ChatServer/Dockerfile
+++ b/Server/ChatServer/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:21
 WORKDIR /my-project
 CMD ["./gradlew", "clean", "bootJar"]
-COPY build/libs/*.jar app.jar
+COPY Server/ChatServer/build/libs/*.jar app.jar
 
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
