--- a/Server/ChatServer/Dockerfile
+++ b/Server/ChatServer/Dockerfile
@@ -11,7 +11,7 @@ RUN ./gradlew clean bootJar
 
 FROM openjdk:21
 WORKDIR /my-project
-COPY build/libs/*.jar app.jar
+COPY --from=build build/libs/*.jar app.jar
 
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
