--- a/Server/ChatServer/build.gradle
+++ b/Server/ChatServer/build.gradle
@@ -10,6 +10,14 @@ group = 'com.szlazakm'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
+
 repositories {
     mavenCentral()
 }
