--- a/Server/ChatServer/src/main/resources/application.yml
+++ b/Server/ChatServer/src/main/resources/application.yml
@@ -3,7 +3,11 @@ logging:
   level:
     org.springframework: INFO
 
+server:
+  port: 8080
+
 spring:
+
   mvc:
     log-request-details: true # for debugging
 
