--- a/Server/ChatServer/Dockerfile
+++ b/Server/ChatServer/Dockerfile
@@ -5,6 +5,7 @@ COPY gradle/ gradle/
 COPY gradlew .
 COPY build.gradle .
 COPY settings.gradle .
+COPY . .
 
 RUN chmod +x gradlew
 RUN ./gradlew clean bootJar
