--- a/Server/ChatServer/build.gradle
+++ b/Server/ChatServer/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springframework.data:spring-data-jpa:3.2.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
+    implementation 'org.postgresql:postgresql:42.7.4'
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.springframework.security:spring-security-core:6.2.1'
