--- a/Server/ChatServer/src/main/resources/application.yml
+++ b/Server/ChatServer/src/main/resources/application.yml
@@ -7,27 +7,16 @@ server:
   port: 8080
 
 spring:
-
   mvc:
     log-request-details: true # for debugging
 
   datasource:
-    url: jdbc:h2:mem:db
-    username: sa
-    password: sa
-    driverClassName: org.h2.Driver
-
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
+    url: jdbc:postgresql://${SAFECHAT_DB_ADDRESS}/safechat-db
+    username: ${SAFECHAT_DB_USERNAME}
+    password: ${SAFECHAT_DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
   jpa:
-#    show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
-    properties:
-      hibernate:
-        format_sql: true
-
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
