--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -9,6 +9,8 @@ android {
     namespace 'com.szlazakm.safechat'
     compileSdk 34
 
+    android.buildFeatures.buildConfig true
+
     defaultConfig {
         applicationId "com.szlazakm.safechat"
         minSdk 27
@@ -52,6 +54,9 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+
+
 }
 
 dependencies {
@@ -100,6 +105,22 @@ dependencies {
     implementation "androidx.room:room-ktx:2.6.1"
     kapt "androidx.room:room-compiler:2.6.1"
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
+
+    // QR code generation
+    implementation 'com.github.kenglxn.QRGen:android:2.6.0'
+
+    // QR code scanning
+    implementation "com.google.mlkit:barcode-scanning:17.3.0"
+    implementation "androidx.camera:camera-core:1.4.1"
+    implementation "androidx.camera:camera-camera2:1.4.1"
+    implementation "androidx.camera:camera-lifecycle:1.4.1"
+    implementation "androidx.camera:camera-view:1.4.1"
+    // ML Kit Barcode Scanning
+    implementation "com.google.mlkit:barcode-scanning:17.0.3"
+    // https://mvnrepository.com/artifact/org.whispersystems/curve25519-java
+    implementation 'org.whispersystems:curve25519-java:0.5.0'
+
+
 
     testImplementation("org.mockito:mockito-core:5.7.0")
     testImplementation("org.mockito:mockito-inline:3.12.4")
