--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -2,8 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.szlazakm.safechat">
-    
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".SafeChatApplication"
@@ -28,6 +31,7 @@
             </intent-filter>
         </activity>
         <service android:name=".client.data.services.MessageSaverService" />
+        <service android:name=".client.data.services.OPKSupplierService" />
     </application>
 
 </manifest>
